# snaplogger

./: .gitignore  AUTHORS.txt  CMakeLists.txt  README.md  TODO.md  TODO.txt  mk
cmake/: CMakeLists.txt  SnapLoggerConfig.cmake
conf/: CMakeLists.txt  README.md  SEVERITY.md  levels.conf  severity.ini  shredlog.conf  snaploggerchecker.conf
conf/logger/: snaploggerchecker.conf
debian/: changelog  control  copyright  snaplogger-doc.install  snaplogger.config  snaplogger.install  snaplogger.logrotate  snaplogger.postinst  snaplogger.postrm  snaplogger.sysuser  snaplogger.templates
dev/: coverage  index.php
doc/: CMakeLists.txt  is-hdd.1  snaplogger.doxy.in
scripts/: CMakeLists.txt  manage-log-dirs  snaplogger
snaplogger/: CMakeLists.txt  appender.cpp  appender.h  buffer_appender.cpp  buffer_appender.h  component.cpp  component.h  console_appender.cpp  console_appender.h  convert_ansi.cpp  convert_ansi.h  date_variable.cpp  environment.cpp  environment.h  environment_variable.cpp  exception.h  file_appender.cpp  file_appender.h  format.cpp  format.h  guard.cpp  guard.h  log.cpp  log.h  logger.cpp  logger.h  logger_variable.cpp  map_diagnostic.cpp  map_diagnostic.h  message.cpp  message.h  nested_diagnostic.cpp  nested_diagnostic.h  options.cpp  options.h  ordinal_indicator.cpp  ordinal_indicator.h  private_logger.cpp  private_logger.h  severity.cpp  (+16 more)
tests/: CMakeLists.txt  appender.cpp  asynchronous.cpp  catch_appender.cpp  catch_asynchronous.cpp  catch_component.cpp  catch_console.cpp  catch_convert_ansi.cpp  catch_diagnostic.cpp  catch_main.cpp  catch_main.h  catch_message.cpp  catch_ordinal_indicator.cpp  catch_severity.cpp  catch_utils.cpp  catch_variable.cpp  catch_version.cpp  component.cpp  diagnostic.cpp  example.cpp  main.cpp  main.h  message.cpp  severity.cpp  test-convert-ansi.sh  variable.cpp  version.cpp
tools/: CMakeLists.txt  convert_ansi.cpp  is_hdd.cpp  shredlog.cpp  snaploggerchecker.cpp
